--- a/css/style.css
+++ b/css/style.css
@@ -244,7 +244,7 @@ aside span {
 .event-grid {
     display: grid;
     grid-template-columns: 8rem auto;
-    grid-template-rows: 1.875rem auto;
+    grid-template-rows: auto auto;
     grid-template-areas: "date title" "date description";
 }
 
